--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,21 @@
+<%=render partial: "layouts/navbar" %>
 <h2> My Recipes</h2>
 <ul>
 <% @recipes.each do |recipe| %>
-<li><%= link_to recipe.title, recipe_path(recipe) %></li>
-</ul>
+<li>
+    <%= link_to recipe.title, recipe_path(recipe) %>
+    </li>
 <%end%>
+
+<h2>My Ingredients</h2>
+
+<% @ingredients.each do |ingredient| %>
+    <li><%= link_to ingredient.name, ingredient_path(ingredient) %></li>
+    <%end%>
+</ul>
+
+<br>
+
+<%=link_to "Add a New Recipe", new_recipe_path %><br>
+<%=link_to "Add a New Ingredient", new_ingredient_path %><br>
+<%= link_to "See my Recipes", user_path(current_user) %>
