--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,9 @@
-<li> <%= link_to "Sign in", new_user_session_path %></li><br>
- <li> <%= link_to "Sign up", new_user_registration_path %></li><br>
+<nav class="">
+
+
 <% if user_signed_in? %>
-<li>Signed in as <%= current_user.email %>
- <%= link_to "Sign Out", destroy_user_session_path, method: :delete %><br></li>
+Signed in as <%= current_user.email %><br>
+ <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
  <%end%>
+
+</nav>
