--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="">
 
 
-<% if user_signed_in? %>
+<% if signed_in? %>
 Signed in as <%= current_user.email %><br>
  <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
  <%end%>
