--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,6 +1,7 @@
 <h1> Welcome My Recipe journal! </h1>
     
-    <%= render partial: "layouts/sign_in" %>
+    <li> <%= link_to "Sign in", new_user_session_path %></li>
+ <li> <%= link_to "Sign up", new_user_registration_path %></li>
     <%= link_to "Sign in with Github", user_github_omniauth_authorize_path %>
     
    
