show page kinks

--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@ingredient) do |f| %>
 
 <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name %>
     <%= f.text_field :name %>
     </div>
 
