--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,16 +5,15 @@
 <%end%>
 <p>Added by: <%= @recipe.user.email %></p>
 <%= link_to "Back to Recipes", recipes_path %>
-<p><a href="/recipes/<%= @recipe.id %>/ingredients/new" class="btn btn-primary"> Add a new Ingredient to this Recipe</a></p>
+
 
  <br></br>
  
-  <% if @recipe.user = current_user %>
+  <% if @recipe.user == current_user %>
+  <p><a href="/recipes/<%= @recipe.id %>/ingredients/new" class="btn btn-primary"> Add a new Ingredient to this Recipe</a></p>
     <form method="POST" action="/recipes/<%=@recipe.id%>">
          <input id="hidden" type="hidden" name="_method" value="DELETE">
          <input type="submit" value="Delete this Recipe"><br>
          
          <%=link_to "Edit this Recipe", edit_recipe_path %>
-         <%else %>
-         <p> Thanks for adding a recipe! </p>
     <%end%>
