--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -4,6 +4,7 @@
 <% @recipes.each do |recipe| %>
 <li>
     <%= link_to recipe.title, recipe_path(recipe) %>
+    <%= button_to 'Add to my recipes', user_path(current_user) %></p>
     </li>
 <%end%>
 
