--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,8 +2,11 @@
 
 
 <% if signed_in? %>
-Signed in as <%= current_user.email %><br>
+
+Signed in as <%= current_user.email %> 
  <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+ <%= link_to "Recipes", recipes_path %> 
  <%end%>
+
 
 </nav>
