--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,8 +1,13 @@
 <% if notice %>
 <p> <%= notice %></p>
 <%end%>
-<%= render partial: "recipe" %> 
-
+<h3><strong>Recipe Title:</strong> <%= @recipe.title %></h3>
+<p><strong>Ingredients:</strong></p>
+<% @recipe.recipe_ingredients.each do |r_i| %>
+<li><%=link_to r_i.ingredient.name, recipe_ingredient_path(@recipe, r_i.ingredient)%></li>
+<%end%>
+<p>Added by: <%= @recipe.user.email %></p>
+<%= link_to "Back to Recipes", recipes_path %>
 
  <br></br>
  
