--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,12 +1,21 @@
-<nav class="">
+
+<style>
+p.groove {border-style: groove;}
+</style>
+<body>
+
+
+<p class="groove">
 
 
 <% if signed_in? %>
 
-Signed in as <%= current_user.email %> 
- <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
- <%= link_to "Recipes", recipes_path %> 
+Signed in as <%= current_user.email %> &nbsp;
+ <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>&nbsp;&nbsp;
+ &nbsp;<%= link_to "Recipes", recipes_path %> 
+  &nbsp; &nbsp;<%= link_to "See my Recipes", user_path(current_user) %>
  <%end%>
+ </p>
+ </body>
 
 
-</nav>
