--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,6 +1,9 @@
+<%=render partial: "layouts/navbar" %>
 <h2> Add a Recipe </h2>
 
 <%=render partial: 'form', locals: {recipe: @recipe, ingredients: @ingredients} %>
+
+<%= link_to "Click here to add your own ingredient", new_ingredient_path %>
 
 
   
