figuring out routes

--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -3,9 +3,11 @@
 <div class="field">
     <%= f.label :name %>
     <%= f.text_field :name %>
+    <%= f.hidden_field :recipe_id %>
     </div>
     
-  <div class= "actions">
-<%= f.submit "Submit", :class => 'btn btn-primary' %></div>
+  <div class="actions">
+      <%= f.submit %>
+  </div>
 
 <% end %>
