--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,9 +4,10 @@
 <%end%>
 <h3><strong>Recipe Title:</strong> <%= @recipe.title %></h3>
 <p><strong>Ingredients:</strong></p>
-<% @recipe.recipe_ingredients.each do |r_i| %>
-<li><%=link_to r_i.ingredient.name, recipe_ingredient_path(@recipe, r_i.ingredient)%></li>
-<%end%>
+<% @recipe.ingredients.each do |i|%>
+<%=link_to i.name, recipe_ingredient_path(@recipe, i)%>
+    <%end%>
+
 <p>Added by: <%= @recipe.user.email %></p>
 <%= link_to "Back to Recipes", recipes_path %>
 
