--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <% if @user = current_user %>
 <% @user.recipes.each do |r| %>
 <li><%= link_to r.title, recipe_path(r) %> 
-<%=button_to "Remove", '/recipes/:id/delete' %></li>
+<%=button_to "Remove", recipe_path(r), :method => "delete" %></li>
 
 <%end%>
 <%end%>
