--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,9 +1,8 @@
-<%= form_for(@ingredient) do |f| %>
+<%= form_for([@recipe, @ingredient]) do |f| %>
 
 <div class="field">
     <%= f.label :name %>
     <%= f.text_field :name %>
-    <%= f.hidden_field :recipe_id %>
     </div>
     
   <div class="actions">
