--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -13,4 +13,6 @@
 <br>
 
 <%=link_to "Add a New Recipe", new_recipe_path %><br>
-<%= link_to "See my Recipes", user_path(current_user) %>
+<%= link_to "See my Recipes", user_path(current_user) %><br>
+<br>
+<%= link_to "Click here for a list of all ingredients in alphabetical order", alphabetical_path %>
