--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,5 +8,5 @@
 <%end%>
 <%end%>
 <br>
-<%= link_to "Add a recipe", new_recipe_path %>
+<%= link_to "Add a recipe", new_recipe_path %><br>
 <%= link_to "Back to All Recipes", recipes_path %>
