--- a/app/views/ingredients/alphabetical.html.erb
+++ b/app/views/ingredients/alphabetical.html.erb
@@ -1,3 +1,4 @@
+<%= render "layouts/navbar" %>
 <h1>Here is a list of all the ingredients in alphabetical order! </h1>
 <h2> <%= @ingredients.alphabetical %></h2>
 
