--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,4 +9,4 @@
 <%end%>
 <br>
 <%= link_to "Add a recipe", new_recipe_path %><br>
-<%= link_to "Back to All Recipes", recipes_path %>
+<%= link_to "Back to Recipes Home", recipes_path %>
