--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@ p.groove {border-style: groove;}
 
 Signed in as <%= current_user.email %> &nbsp;
  <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>&nbsp;&nbsp;
- &nbsp;<%= link_to "Recipes", recipes_path %> 
+ &nbsp;<%= link_to "Recipes Home", recipes_path %> 
   &nbsp; &nbsp;<%= link_to "See my Recipes", user_path(current_user) %>
  <%end%>
  </p>
