--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,18 +1,17 @@
 <%= form_for([@recipe, @ingredient]) do |f| %>
+
 <% if @ingredient.errors.any? %>
 <div id="error_explanation">
-    <h2>
+    <p style="color:red;">
       <%= pluralize(@ingredient.errors.count, "error") %>
       prohibited this ingredient from being saved:
-    </h2>
-    
-    <ul>
     <% @ingredient.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
+    <li style="color:red;"><strong><%= msg %></strong><br><br>
+    Please enter another ingredient name.</li>
     <% end %>
-    </ul>
   </div>
 <% end %>
+
 
 <div class="field_with_errors">
     <%= f.label :name %>
