--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -14,7 +14,7 @@
 
 <hr>
     <h3> And here are existing ingredients:</h3>
-    <% @ingredients.each do |i| %>
+    <% @recipe.ingredients.each do |i| %> 
          <li><%= i.name %></li>
     <%end%>
     
