--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,7 +1,19 @@
 <%= form_for(@recipe) do |f| %>
 
-<div class= "field">
-<%= f.label :title %><br>
+<% if @recipe.errors.any? %>
+<div id="error_explanation">
+    <p style="color:red;">
+      <%= pluralize(@recipe.errors.count, "error") %>
+      prohibited this ingredient from being saved:
+    <% @recipe.errors.full_messages.each do |msg| %>
+    <li style="color:red;"><strong><%= msg %></strong><br><br>
+    Please enter another title.</li>
+    <% end %>
+  </div>
+<% end %>
+
+<div class="field_with_errors">
+<%= f.label :title %>
 <%= f.text_field :title %>
 </div>
 
