--- a/app/views/ingredients/alphabetical.html.erb
+++ b/app/views/ingredients/alphabetical.html.erb
@@ -1,4 +1,9 @@
 <%= render "layouts/navbar" %>
 <h1>Here is a list of all the ingredients in alphabetical order! </h1>
-<h2> <%= @ingredients.alphabetical %></h2>
+<p><%= @ingredients.alphabetical %></p>
+
+<%=quantity %>
+
+
+
 
