--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,16 +5,19 @@
 <h3><strong>Recipe Title:</strong> <%= @recipe.title %></h3>
 <p><strong>Ingredients:</strong></p>
  <% @recipe.recipe_ingredients.each do |r_i| %>
-<li><%=link_to r_i.ingredient.name, recipe_ingredient_path(@recipe, r_i.ingredient)%></li>
+<li><%=link_to r_i.ingredient.name, recipe_ingredient_path(@recipe, r_i.ingredient) %> <%=r_i.quantity %>
+</li><br>
+
 <%end%>
+
 
 <p>Added by: <%= @recipe.user.email %></p>
 <%= link_to "Back to Recipes Home", recipes_path %>
 
  <br></br>
   <% if @recipe.user_id == current_user.id %>
-  <p><a href="/recipes/<%= @recipe.id %>/ingredients/new" class="btn btn-primary"> Add a new Ingredient</a></p>
     <%=button_to "Remove", recipe_path(@recipe), :method => "delete" %></li>
-         <%=link_to "Edit this Recipe", edit_recipe_path %>
+    <%=link_to "Edit this Recipe", edit_recipe_path %>
+     <p><a href="/recipes/<%= @recipe.id %>/ingredients/new" class="btn btn-primary">Create your own Ingredient for this Recipe</a></p>
     <%end%>
 
