--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,10 +2,11 @@
 <% if notice %>
 <p> <%= notice %></p>
 <%end%>
-<h3><strong>Recipe Title:</strong> <%= @recipe.title %></h3>
+<h3><strong>Recipe Title:</strong> <%= @recipe.title %> </h3>
 <p><strong>Ingredients:</strong></p>
  <% @recipe.recipe_ingredients.each do |r_i| %>
-<li><%=link_to r_i.ingredient.name, recipe_ingredient_path(@recipe, r_i.ingredient) %> <%=r_i.new_quantity %> 
+<li><%=link_to r_i.ingredient.name, recipe_ingredient_path(@recipe, r_i.ingredient) %>
+
 </li><br>
 
 <%end%>
