--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -15,7 +15,12 @@
 <div class="field_with_errors">
 <%= f.label :title %>
 <%= f.text_field :title %>
-</div>
+</div><br>
+
+<div class="field">
+<%= f.label :meal  %>
+<%= f.text_field :meal %>
+</div><br>
 
 <div class="field">
     <%= f.label :ingredients %><br>
