--- a/app/views/recipes/scope.html.erb
+++ b/app/views/recipes/scope.html.erb
@@ -1,3 +1,4 @@
+<%=render partial: "layouts/navbar" %>
 <h1> Recipes that include the ingredient of cheese: </h1>
 <% @recipes.cheese.each do |r| %>
 <li><%= r.title %></li>
