--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -13,21 +13,30 @@
 <% end %>
 
 <div class="field_with_errors">
-<%= f.label :title %>
+<%= f.label :title %>:
 <%= f.text_field :title %>
 </div><br>
 
 <div class="field">
-<%= f.label :meal  %>
+<%= f.label :meal  %>(e.g. breakfast, lunch, dinner, dessert, snack): 
 <%= f.text_field :meal %>
 </div><br>
 
-<div class="field">
+
     <%= f.label :ingredients %><br>
   <%= f.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name %>
   </div><br>
-  
-  <div class="actions">
+  <div class="field_with_errors">
+  <%= f.fields_for :ingredients do |i| %>
+  <%= i.label :name %>:
+  <%= i.text_field :name %><br>
+   <%= f.fields_for :recipe_ingredients do |ri| %>
+   <%= ri.label :quantity %>:
+   <%= ri.text_field :quantity %><br><br>
+   <%end%>
+   <%end%>
+
+  <div class="actions"><br>
       <%= f.submit %>
   </div>
 
