user submittable attribute on joins table

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -18,6 +18,6 @@
 
 <br><br><br><br>
 
-<%=link_to "Click here for all Cheesy Recipes", cheese_path %>
+<%=link_to "Click here for all dinner Recipes", scope_path %>
 
 
