--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -17,21 +17,20 @@
 <%= f.text_field :title %>
 </div><br>
 
-<div class="field">
+<div class="field_with_errors">
 <%= f.label :meal  %>(e.g. breakfast, lunch, dinner, dessert, snack): 
 <%= f.text_field :meal %>
 </div><br>
-
-
-    <%= f.label :ingredients %><br>
-  <%= f.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name %>
+       <%= f.label :ingredients %><br>
+      <%= f.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name %>
   </div><br>
+
   <div class="field_with_errors">
   <%= f.fields_for :ingredients do |i| %>
-  <%= i.label :name %>:
+  <%= i.label :name  %> of Ingredient:
   <%= i.text_field :name %><br>
    <%= f.fields_for :recipe_ingredients do |ri| %>
-   <%= ri.label :quantity %>:
+   <%= ri.label :quantity %> of Ingredient:
    <%= ri.text_field :quantity %><br><br>
    <%end%>
    <%end%>
