--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -8,9 +8,9 @@
 <%end%>
  <br></br>
  
- <%if (current_user.recipes & @ingredient.recipes).any?%>
- <%=link_to "Edit this Ingredient", edit_recipe_path(@recipe) %>
+ <!--<%#if (current_user.recipes & @ingredient.recipes).any?%>-->
+ <!--<%#=link_to "Edit this Ingredient", edit_ingredient_path(@ingredient) %>-->
 
-<%end%>
+<%#end%>
  
  
