--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,7 +1,7 @@
 <%=render partial: "layouts/navbar" %>
 <h2> Add a Recipe </h2>
 
-<%=render partial: 'form', locals: {recipe: @recipe, ingredients: @ingredients, recipe_ingredients: @recipe_ingredients} %>
+<%=render partial: 'form', locals: {recipe: @recipe, ingredients: @ingredients} %>
 
 
 
