--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,3 +1,3 @@
 <%=render partial: "layouts/navbar" %>
 <h2> Edit this Recipe </h2>
-<%= render 'form' %>
+<%= render 'form', locals: {recipe: @recipe, ingredients: @ingredients} %>
