--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -26,15 +26,13 @@
       </div><br>
 
       
-    <div class="field_with_errors">
-          <%=f.fields_for :ingredients do |i| %>
+    <div class="field">
+          <%=f.fields_for :recipe_ingredients do |i| %>
           <%= i.label :name  %> of Ingredient:
           <%= i.text_field :name %><br>
-          
-          <%= f.fields_for :recipe_ingredients do |ri| %>
-          <%= ri.label :quantity %> of Ingredient:
-          <%= ri.text_field :quantity %><br><br>
-   <%end%>   
+        
+          <%= i.label :quantity %> of Ingredient:
+          <%= i.text_field :quantity %><br><br>
    <%end%>
 
 
