--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,9 +4,25 @@
     <%= f.label :text %>
     <%= f.text_field :text%>
     </div>
-    
+
   <div class="actions">
       <%= f.submit %>
   </div>
 
+
 <% end %>
+
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $('form').submit(function(event) {
+    event.preventDefault();
+
+    var values = $(this).serialize();
+    var posting = $.post('/comments', values);
+
+    posting.done(function(data){
+      console.log(data);
+    })
+    })
+})
+</script>
