--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,6 @@
 <%=render partial: "layouts/navbar" %>
 
-<a href="#" class="js-next" data-d="<%=@recipe.id%>"> Next Recipe</a>
+<a href="#" class="js-next" data-id="<%=@recipe.id%>"> Next Recipe</a>
 
    <% if notice %>
      <p> <%= notice %></p>
@@ -28,6 +28,7 @@
 <%end%>
 
 <p><a href="/recipes/<%= @recipe.id %>/comments/new"> Add a Comment </p>
+  <p><%= render partial: "comments/form" %></p>
 
  <br></br>
   <% if @recipe.user_id == current_user.id %>
@@ -35,3 +36,15 @@
     <%=link_to "Edit this Recipe", edit_recipe_path %>
      <p><a href="/recipes/<%= @recipe.id %>/ingredients/new" class="btn btn-primary">Create your own Ingredient for this Recipe</a></p>
     <%end%>
+
+  <script type="text/javascript" charset="utf-8">
+    $(function() {
+      $(".js-next").on("click", function(data) {
+        var id = data.currentTarget.dataset.id;
+          debugger
+        $.get("/recipes/" + id + ".json", function(data) {
+          var recipe = data;
+        })
+      })
+    })
+</script>
