ingredients js and more info button

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,8 @@ p.groove {border-style: groove;}
 Signed in as <%= current_user.email %> &nbsp;
  <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>&nbsp;&nbsp;
  &nbsp;<%= link_to "Recipes Home", recipes_path %>
-  &nbsp; &nbsp;<%= link_to "See my Recipes", user_path(current_user), class: "user_recipes"%>
+ &nbsp;<%= link_to "Ingredients List", ingredients_path, class: "all_ingredients" %>
+  &nbsp; &nbsp;<%= link_to "See my Recipes", user_path(current_user)%>
  <%end%>
  </p>
  </body>
