--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
   <%= content_tag(:div, flash[:alert], :id => "flash_alert") if flash[:alert] %>
 
   <body>
+    <div class="container">
+      <%=render partial: "layouts/navbar" %>
+      <div id="app-container">
     <%= yield %>
+  </div>
+  </div>
   </body>
 </html>
