--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,3 @@
-<%=render partial: "layouts/navbar" %>
-
-
 <h2> Recipes Home</h2>
 
 <% @recipes.each do |recipe| %>
@@ -9,7 +6,7 @@
 
   <button class="js-more" data-id="<%=recipe.id%>">More Info</button>
 
-  <ul id="recipe<%= recipe.id%>">
+  <ul id="recipe-<%= recipe.id%>">
   </ul>
   </li>
 
@@ -20,8 +17,8 @@
 <%=link_to "Add a New Recipe", new_recipe_path %><br>
 <%= link_to "See my Recipes", user_path(current_user) %><br>
 <br>
-<%= link_to "Click here for all Ingredients in Alphabetical Order", alphabetical_path %>
+<%#= link_to "Click here for all Ingredients in Alphabetical Order", alphabetical_path %>
 
-<br><br><br><br>
+<br><br>
 
 <%=link_to "Click here for all dinner Recipes", scope_path %>
