--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,6 +1,6 @@
-<!-- <h3> Here is the comment on: <%#= @recipe.title %>, by: <%#=@comment.user.email %></h3> -->
+<h3> Here is the comment on: <= @recipe.title %>, by: <%=@comment.user.email %></h3>
 <%= @comment.text %>
-<!-- <#% if @comment.user_id == current_user.id %>
-<%#= link_to "Edit your comment here", edit_recipe_comment_path %>
-<%#= button_to "Delete your comment", recipe_comment_path(@comment), :method => "delete" %>
-<%#end%> -->
+ <% if @comment.user_id == current_user.id %>
+<%= link_to "Edit your comment here", edit_recipe_comment_path %>
+<%= button_to "Delete your comment", recipe_comment_path(@comment), :method => "delete" %>
+<%end%>
