--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -15,23 +15,21 @@
 <%end%>
 
 <p>Added by: <%= @recipe.user.email %></p>
-<%= link_to "Back to Recipes Home", recipes_path %>
+
 
 <h3> All Comments: </h3>
-<% @recipe.comments.each do |comment| %>
-<ul>
-<li class="recipeComment"><%=link_to comment.text, recipe_comment_path(@recipe.id, comment.id) %></li>
-<p>written by <%=comment.user.email %></p>
-</ul>
-<%end%>
+<div class="comments">
+  <%=render 'comments/comments' %>
+</div>
 
 
-  <%= form_for(@comment, :url => recipe_comments_path(@recipe)) do |f|  %>
+<!-- @comment, :url => recipe_comments_path(@recipe) -->
+  <%= form_for([@recipe, @comment]) do |f|  %>
   <%= f.text_area :text %>
   <p> <%= f.submit %></p>
   <%end%>
 
-
+<%= link_to "Back to Recipes Home", recipes_path %>
 
  <br></br>
   <% if @recipe.user_id == current_user.id %>
