create resource ajax firing

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -18,7 +18,7 @@
 
 
 <h3> All Comments: </h3>
-<ul>
+<ul class="comments">
   <% @recipe.comments.each do |comment| %>
   <li><%= comment.text %></li>
     written by: <%= comment.user.email %></li><br>
